--- a/ideas.mdwn
+++ b/ideas.mdwn
@@ -1,20 +1,20 @@
-**SLOPI** (pronounced "sloppy") is short for Searchable Linkable Open Public Indexed, a style of communication I recommend for open source projects: https://github.com/good-labs/slopi-communication
+**SLOPI** (pronounced "sloppy") is short for Searchable Linkable Open Public Indexed, a style of communication I recommend for open source projects: <https://github.com/good-labs/slopi-communication>
 
-**Feedcritic** helps you keep track of the many podcasts you're subscribed to and choose which episodes to listen to. I'm playing around with code at https://github.com/pdurbin/feedcritic (includes screenshots) which has been deployed to http://podcasts.greptilian.com
+**Feedcritic** helps you keep track of the many podcasts you're subscribed to and choose which episodes to listen to. I'm playing around with code at <https://github.com/pdurbin/feedcritic> (includes screenshots) which has been deployed to <http://podcasts.greptilian.com>
 
-**Pastries** is a quick and dirty HTML5 game that could be cleaned up and used in a tutorial for kids writing their own games: https://github.com/pdurbin/pastries
+**Pastries** is a quick and dirty HTML5 game that could be cleaned up and used in a tutorial for kids writing their own games: <https://github.com/pdurbin/pastries>
 
-**Druthers** allows for crowdsourced issue ordering. https://github.com/pdurbin/druthers contains proof of concept code. To see me mentioning the idea to a user asking about particular issues, see http://irclog.iq.harvard.edu/dataverse/2017-03-01#i_49428
+**Druthers** allows for crowdsourced issue ordering. <https://github.com/pdurbin/druthers> contains proof of concept code. To see me mentioning the idea to a user asking about particular issues, see <http://irclog.iq.harvard.edu/dataverse/2017-03-01#i_49428>
 
-**Connectors** allows you to describe the relationships between people you know and where they hang out online. There is a some proof of concept code at https://github.com/pdurbin/connectors and an example based on IRC channels at http://irc.greptilian.com
+**Connectors** allows you to describe the relationships between people you know and where they hang out online. There is a some proof of concept code at <https://github.com/pdurbin/connectors> and an example based on IRC channels at <http://irc.greptilian.com>
 
 **Outsiders** would allow you easily filter your GitHub issues down to the ones that weren't created by members of the project. An example [query][] would be `is:open repo:pdurbin/addressbookmvc -author:pdurbin -author:dhutty`.
 
-**Unread** monitors your WeeChat [hotlist][] and provides a link to the public logs of an IRC channel so you can catch up in a browser when you don't have access to your screen session. There's some very rough code at http://unread.greptilian.com that needs to be cleaned up.
+**Unread** monitors your WeeChat [hotlist][] and provides a link to the public logs of an IRC channel so you can catch up in a browser when you don't have access to your screen session. There's some very rough code at <http://unread.greptilian.com> that needs to be cleaned up.
 
 **Clipshare** would allow you to pause the podcast you're listening to and share a clip that you find particularly interesting. See also a related [discussion][] in the AntennaPod issue tracker.
 
-**CopyAddressToClipboardAndTitle (CATCAT)** would be a Firefox add-on that copys the address (URL) and title of a web page to the clipboard. It would be useful for GitHub Issues, Twitter posts, news articles, and more. Previously I used CoLT for this purpose but there hasn't been any movement on https://github.com/jgbishop/colt/issues/16 so maybe it is time to start a new add-on, perhaps using https://github.com/def00111/copy-link-text as a starting point.
+**CopyAddressToClipboardAndTitle (CATCAT)** would be a Firefox add-on that copys the address (URL) and title of a web page to the clipboard. It would be useful for GitHub Issues, Twitter posts, news articles, and more. Previously I used CoLT for this purpose but there hasn't been any movement on <https://github.com/jgbishop/colt/issues/16> so maybe it is time to start a new add-on, perhaps using <https://github.com/def00111/copy-link-text> as a starting point.
 
 [notes on Feedcritic]: https://docs.google.com/document/d/1oAw9vik_MNMZlSue3W4FY4ba46bfG0XrlWx0aRvsFso/edit?usp=sharing
 [query]: https://github.com/search?utf8=%E2%9C%93&q=is%3Aopen+repo%3Apdurbin%2Faddressbookmvc+-author%3Apdurbin+-author%3Adhutty&ref=simplesearch
