add Zulip topic

--- a/podcasts/clips/glue-slack.mdwn
+++ b/podcasts/clips/glue-slack.mdwn
@@ -11,3 +11,5 @@ So I think that the channel model was beautiful in terms of letting people get s
 All-In podcast episode 161 at 51:16 - https://youtu.be/EJEAq0Nsesc?si=HzHP7OGyvU60kLaT&t=3076
 
 https://gluegroups.com for now, then https://glue.ai
+
+[Zulip topic](https://chat.zulip.org/#narrow/stream/137-feedback/topic/topics.20over.20channels.2C.20Glue/near/1719573)
