--- a/vim.mdwn
+++ b/vim.mdwn
@@ -16,3 +16,11 @@ http://kly.no/posts/2010_08_31__Wiki_sh___mediawiki_for_geeks__.html
 ## Keeping width to 72 characters
 
 vim "+set textwidth=72" path/to/file.txt
+
+## vim-tsv
+
+```
+vim "+set tabstop=30" data.tsv
+```
+
+https://github.com/pdurbin/vim-tsv
